solve overlap problem in navigation

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -35,11 +35,20 @@
 	width: 100%;
 }
 
+.navigation h1 {
+  margin-bottom: 10px;
+}
+
 .navigation ul {
 	border: none;
 	background: none;
   list-style-type: none;
   padding-inline-start: 20px;
+}
+
+.navigation ul li {
+	height: auto;
+  margin-bottom: 5px;
 }
 
 .search {
